--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1> Simon Says Game 🎮</h1>
     <h2>Press Enter Key To Start The Game 😃</h2>
+    <h3> Your Highest Level So Far : <span>0</span></h3>
     <div class="btn-container">
         <div class="row-one">
             <div class="btn yellow" type="button" id="yellow"></div>
